crates/es-fluent-derive/tests/ui/fluent_label_bare_flags.stderr
error: Attribute error in label container: `#[fluent_label(origin)]` has the wrong value shape for key `origin` in label container `LoginForm`
       help: use an explicit boolean, for example `origin = true`
 --> tests/ui/fluent_label_bare_flags.rs:4:16
  |
4 | #[fluent_label(origin, variants)]
  |                ^^^^^^

error: Attribute error in label container: `#[fluent_label(variants)]` has the wrong value shape for key `variants` in label container `LoginForm`
       help: use an explicit boolean, for example `variants = true`
 --> tests/ui/fluent_label_bare_flags.rs:4:24
  |
4 | #[fluent_label(origin, variants)]
  |                        ^^^^^^^^
